--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     'controls': 0,      // Hide player controls
                     'disablekb': 1,     // Disable keyboard controls
                     'loop': 0,          // Loop the video (requires playlist)
-                    'playlist': 'sO2L1L9W6Vw' // The loop parameter only works with a playlist.
+                    'playlist': '' // The loop parameter only works with a playlist.
                 },
                 events: {
                     'onReady': onPlayerReady
