--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     'controls': 0,      // Hide player controls
                     'disablekb': 1,     // Disable keyboard controls
                     'loop': 1,          // Loop the video (requires playlist)
-                    'playlist': 'RL' // The loop parameter only works with a playlist.
+                    'playlist': '' // The loop parameter only works with a playlist.
                 },
                 events: {
                     'onReady': onPlayerReady
