--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     hidden-menu transition-all duration-500 ease-in-out">
 
             <!-- The five dynamically appearing buttons, now with the same styling as the main button -->
-            <a href="page1.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
+            <a href="/page1.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
                            shadow-lg hover:shadow-xl
                            transition-all duration-300 transform
                            hover:scale-110
