--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                            active:scale-95 text-center">
                 math games
             </a>
-            <a href="downa.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
+            <a href="download-app-page.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
                            shadow-lg hover:shadow-xl
                            transition-all duration-300 transform
                            hover:scale-110
