--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                            active:scale-95 text-center">
                 apps
             </a>
-            <a href="page3.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
+            <a href=".html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
                            shadow-lg hover:shadow-xl
                            transition-all duration-300 transform
                            hover:scale-110
