--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                            hover:scale-110
                            focus:outline-none focus:ring-4 focus:ring-blue-300
                            active:scale-95 text-center">
-                App 4
+                embedded
             </a>
             <a href="page5.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
                            shadow-lg hover:shadow-xl
