--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                            active:scale-95 text-center">
                 music
             </a>
-            <a href="page4.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
+            <a href="embeds.html" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-xl
                            shadow-lg hover:shadow-xl
                            transition-all duration-300 transform
                            hover:scale-110
