--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
                                hover:scale-110
                                focus:outline-none focus:ring-4 focus:ring-gray-300
                                active:scale-95">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 9.75L19.5 12m0 0l-2.25 2.25M19.5 12H12m0 0V21.75c0 .621.504 1.125 1.125 1.125h.25a1.125 1.125 0 001.125-1.125V19.5m0-16.5V4.5m-1.125 2.25a2.25 2.25 0 110 4.5m0-4.5a2.25 2.25 0 00-2.25 2.25M17.25 21.75L12 16.5m-4.75 4.75a2.25 2.25 0 01-3.182-3.182L5.25 14.25m4.5-4.5l-2.25-2.25m2.25 2.25l2.25-2.25M7.25 5.25A2.25 2.25 0 0110.432 2.068a2.25 2.25 0 013.182-3.182L14.25 5.25M21.75 14.25L16.5 9m-4.5 2.25a2.25 2.25 0 01-3.182-3.182l2.25 2.25M14.25 9L12 6.75m-4.5-2.25a2.25 2.25 0 00-2.25-2.25M12 4.5m0-1.5a2.25 2.25 0 012.25 2.25m0-4.5a2.25 2.25 0 00-2.25-2.25" />
-                    </svg>
-
+                    <img src="https://iili.io/FDcmKZJ.png"
+                         alt="Sound Icon"
+                         class="w-8 h-8">
                 </button>
                 <!-- Volume slider that appears on hover -->
                 <div class="absolute bottom-full mb-2 slider-wrapper">
