--- a/download-app-page.html
+++ b/download-app-page.html
@@ -41,7 +41,16 @@
             
             <div class="flex flex-col items-center">
                 <h3 class="text-xl font-semibold text-gray-800 text-center mb-4">test bookmarklet</h3>
-                  <button onclick="showAlert()" class="w-full bg-blue-600 text-white font-bold py-3 px-8 rounded-xl
+                  <button onclick="javascript:(function() {
+function se(d) {
+    return d.selection ? d.selection.createRange().text : d.getSelection()
+} 
+var s = se(document); 
+for (var i=0; i<frames.length && (s==null || s==''); i++) s = se(frames[i].document); 
+if (!s || s=='') s = prompt('Enter%20search%20terms%20for%20Wikipedia',''); 
+open('https://en.wikipedia.org' + (s ? '/w/index.php?title=Special:Search&search=' + encodeURIComponent(s) : '')).focus();
+})();
+" class="w-full bg-blue-600 text-white font-bold py-3 px-8 rounded-xl
                                   shadow-lg hover:shadow-xl
                                   transition-all duration-300 transform
                                   hover:scale-110
