--- a/download-app-page.html
+++ b/download-app-page.html
@@ -41,7 +41,7 @@
             
             <div class="flex flex-col items-center">
                 <h3 class="text-xl font-semibold text-gray-800 text-center mb-4">test bookmarklet</h3>
-                  <button onclick="showAlert()" class="w-full bg-blue-600 text-white font-bold py-3 px-8 rounded-xl
+                  <button onclick="showAlert(hello man)" class="w-full bg-blue-600 text-white font-bold py-3 px-8 rounded-xl
                                   shadow-lg hover:shadow-xl
                                   transition-all duration-300 transform
                                   hover:scale-110
