--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     
     <!-- Audio element for playing local music -->
     <!-- The autoplay attribute will attempt to start the music automatically. -->
-    <audio id="my-audio" src="audio/bg-music.mp3" loop autoplay></audio>
+    <audio id="my-audio" src="music/flashing lights.mp3" loop autoplay></audio>
 
     <script>
         // Get references to the main button and the container for the sub-buttons
@@ -275,3 +275,4 @@
     </script>
 </body>
 </html>
+
